--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typescript"
   ],
   "devDependencies": {
-    "@as-pect/cli": "^3.0.0-alpha.3"
+    "@as-pect/cli": "^3.0.0-beta.0"
   },
   "dependencies": {
     "assemblyscript": "^0.9.2"
